--- a/src/components/OrderedList.module.scss
+++ b/src/components/OrderedList.module.scss
@@ -9,17 +9,8 @@
 
     li {
         display: table;
-        line-height: 1.7;
-        margin-bottom: 0.6rem;
-
-        &::before {
-            color: $color-content-list-indicator-dark;
-            content: counters(ordered-list, ".") " ";
-            counter-increment: ordered-list;
-            display: table-cell;
-            font-family: $font-text-monospaced;
-            font-size: 0.88em;
-            padding-right: 1.3rem;
-        }
+        line-height: calc(29 / 17);
+        margin: 0;
+        margin-bottom: 1.3rem;
     }
 }
