--- a/src/components/CodeBlock.module.scss
+++ b/src/components/CodeBlock.module.scss
@@ -20,6 +20,7 @@
         padding-left: 2.1rem;
         padding-right: 2.1rem;
         margin: 0;
+        margin-bottom: -0.1rem;
         overflow-x: scroll;
         border-bottom: 1px solid $color-content-code-block-indicator;
         color: $color-content-body;
@@ -31,7 +32,7 @@
 
     @mixin language {
         display: block;
-        margin-top: -0.1rem;
+        margin-top: 0;
         margin-left: auto;
         margin-right: 2.1rem;
         margin-bottom: 0.6rem;
