Refines post styles.

--- a/src/components/InlineCode.module.scss
+++ b/src/components/InlineCode.module.scss
@@ -2,16 +2,16 @@
 @import '../styles/colors';
 
 .inlineCode {
-    font-family: $font-text-monospaced;
-    font-weight: 400;
-    font-size: 0.76em;
-    line-height: 2.23;
     background-color: $color-content-code-block-background;
-    padding-left: 0.3rem;
-    padding-right: 0.3rem;
-    margin-left: 0.3rem;
-    margin-right: 0.3rem;
     border-left: solid 2px $color-content-code-block-indicator;
     border-right: solid 2px $color-content-code-block-indicator;
-    word-wrap: break-word;
+    font-family: $font-text-monospaced;
+    font-size: 0.76em;
+    font-weight: 400;
+    line-height: 2.23;
+    margin-left: 0.3rem;
+    margin-right: 0.3rem;
+    padding-left: 0.3rem;
+    padding-right: 0.3rem;
+    word-break: break-all;
 }
