--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -44,6 +44,7 @@ $color-content-code-block-language:     $_white;
 $color-content-code-block-line-number:  $_gray-55;
 $color-content-math-block-background:   #faf9f7;
 $color-content-math-block-indicator:    #e6e2da;
+$color-content-math:                    $_gray-21;
 $color-content-table-separator:         $_gray-89;
 $color-content-divider:                 $_gray-55;
 $color-content-list-indicator-light:    $_gray-89;
