--- a/src/components/TagsLabel.module.scss
+++ b/src/components/TagsLabel.module.scss
@@ -1,6 +1,6 @@
 @import '../styles/colors';
 
-.tags a {
+.footer a {
     text-decoration: none;
     color: $color-ui-caption-secondary;
     transition: color 0.3s ease-in-out;
