--- a/src/components/PostListLayout.module.scss
+++ b/src/components/PostListLayout.module.scss
@@ -1,6 +1,6 @@
-.postListContainer {
+.list {
+    margin-bottom: 5.2rem;
     margin-left: 5.5rem;
     margin-right: 5.5rem;
     margin-top: 5.3rem;
-    margin-bottom: 5.2rem;
 }
