--- a/src/components/CategoryLabel.module.scss
+++ b/src/components/CategoryLabel.module.scss
@@ -1,17 +1,19 @@
 @import '../styles/colors';
 
-.category a {
-    text-decoration: none;
-    color: $color-ui-caption-primary;
-    transition: color 0.3s ease-in-out;
-
-    &:visited {
+.category {
+    a {
         color: $color-ui-caption-primary;
-    }
-
-    &:hover,
-    &:visited:hover {
-        color: $color-hover;
+        text-decoration: none;
         transition: color 0.3s ease-in-out;
+
+        &:visited {
+            color: $color-ui-caption-primary;
+        }
+
+        &:hover,
+        &:visited:hover {
+            color: $color-hover;
+            transition: color 0.3s ease-in-out;
+        }
     }
 }
