--- a/src/components/TagsLabel.module.scss
+++ b/src/components/TagsLabel.module.scss
@@ -1,8 +1,8 @@
 @import '../styles/colors';
 
-.footer a {
-    text-decoration: none;
+.tags a {
     color: $color-ui-caption-secondary;
+    text-decoration: none;
     transition: color 0.3s ease-in-out;
 
     &:visited {
