--- a/src/components/Image.module.scss
+++ b/src/components/Image.module.scss
@@ -1,10 +1,6 @@
-.picture {
+.image {
     display: block;
     margin-left: -2.1rem;
     margin-right: -2.1rem;
     width: calc(100% + 2.1rem * 2);
-
-    img {
-        width: 100%;
-    }
 }
