--- a/src/components/PageDocument.module.scss
+++ b/src/components/PageDocument.module.scss
@@ -9,7 +9,7 @@
     .header {
         .title {
             color: $color-content-headline-primary;
-            font-family: $font-text-serif;
+            font-family: $font-text-sans;
             font-size: 4.4em;
             font-weight: 300;
             line-height: 1.18;
@@ -18,7 +18,7 @@
 
         .subtitle {
             color: $color-content-headline-secondary;
-            font-family: $font-text-serif;
+            font-family: $font-text-sans;
             font-size: 2.8em;
             font-weight: 300;
             line-height: 1.46;
@@ -32,7 +32,7 @@
     }
 
     .content {
-        font-family: $font-text-serif;
+        font-family: $font-text-sans;
         font-size: 1.7em;
         line-height: 1.7;
         margin-bottom: 4.1rem;
@@ -53,9 +53,5 @@
                 transition: color 0.3s ease-in-out;
             }
         }
-    }
-
-    .footer {
-        margin-bottom: 5.2rem;
     }
 }
