--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -165,6 +165,10 @@ html {
     margin-top: 1.3rem;
 }
 
+.body-h1 + .body-sans-top {
+    margin-top: 1.2rem;
+}
+
 .body-h1 + .body-rect-top {
     margin-top: 2.4rem;
 }
@@ -203,6 +207,10 @@ html {
 
 .body-h2 + .body-serif-top {
     margin-top: 1.4rem;
+}
+
+.body-h2 + .body-sans-top {
+    margin-top: 1.3rem;
 }
 
 .body-h2 + .body-rect-top {
@@ -245,6 +253,10 @@ html {
     margin-top: 1.3rem;
 }
 
+.body-h3 + .body-sans-top {
+    margin-top: 1.1rem;
+}
+
 .body-h3 + .body-rect-top {
     margin-top: 2.4rem;
 }
@@ -283,6 +295,10 @@ html {
 
 .body-h4 + .body-serif-top {
     margin-top: 1.4rem;
+}
+
+.body-h4 + .body-sans-top {
+    margin-top: 1.3rem;
 }
 
 .body-h4 + .body-rect-top {
@@ -325,6 +341,10 @@ html {
     margin-top: 1.4rem;
 }
 
+.body-h5 + .body-sans-top {
+    margin-top: 1.3rem;
+}
+
 .body-h5 + .body-rect-top {
     margin-top: 2.5rem;
 }
@@ -365,6 +385,10 @@ html {
     margin-top: 1.3rem;
 }
 
+.body-h6 + .body-sans-top {
+    margin-top: 1.2rem;
+}
+
 .body-h6 + .body-rect-top {
     margin-top: 2.4rem;
 }
@@ -374,7 +398,7 @@ html {
 }
 
 ////////////////////////////////////////////////////////////////////////////////
-// body-text-bottom-serif
+// body-serif-bottom
 ////////////////////////////////////////////////////////////////////////////////
 
 .body-serif-bottom + .body-h1 {
@@ -414,6 +438,46 @@ html {
 }
 
 ////////////////////////////////////////////////////////////////////////////////
+// body-sans-bottom
+////////////////////////////////////////////////////////////////////////////////
+
+.body-sans-bottom + .body-h1 {
+    margin-top: 3.5rem;
+}
+
+.body-sans-bottom + .body-h2 {
+    margin-top: 3.4rem;
+}
+
+.body-sans-bottom + .body-h3 {
+    margin-top: 3.5rem;
+}
+
+.body-sans-bottom + .body-h4 {
+    margin-top: 3.4rem;
+}
+
+.body-sans-bottom + .body-h5 {
+    margin-top: 3.4rem;
+}
+
+.body-sans-bottom + .body-h6 {
+    margin-top: 3.5rem;
+}
+
+.body-sans-bottom + .body-sans-top {
+    margin-top: 1.3rem;
+}
+
+.body-sans-bottom + .body-rect-top {
+    margin-top: 2.5rem;
+}
+
+.body-sans-bottom + .body-separator {
+    margin-top: 4.6rem;
+}
+
+////////////////////////////////////////////////////////////////////////////////
 // body-rect-bottom
 ////////////////////////////////////////////////////////////////////////////////
 
@@ -443,6 +507,10 @@ html {
 
 .body-rect-bottom + .body-serif-top {
     margin-top: 2.3rem;
+}
+
+.body-rect-bottom + .body-sans-top {
+    margin-top: 2.2rem;
 }
 
 .body-rect-bottom + .body-rect-top {
@@ -483,6 +551,10 @@ html {
 
 .body-separator + .body-serif-top {
     margin-top: 4.5rem;
+}
+
+.body-separator + .body-sans-top {
+    margin-top: 4.9rem;
 }
 
 .body-separator + .body-rect-top {
