--- a/src/components/MorePostItem.module.scss
+++ b/src/components/MorePostItem.module.scss
@@ -2,18 +2,106 @@
 @import '../styles/colors';
 
 .morePostItem {
-    &:last-child {
-        margin-bottom: 0;
-    }
-
     .caption {
         color: $color-tint;
         display: block;
         font-family: $font-ui-sans;
-        font-size: 1.5em;
-        line-height: 1.2;
-        margin-bottom: 2rem;
+        font-size: 1.1em;
+        font-weight: 500;
+        line-height: calc(13 / 11);
+        margin-top: 3.2rem;
         text-align: left;
         text-transform: uppercase;
+    }
+
+    .postExcerpt {
+        .header {
+            a {
+                display: inline-block;
+                text-decoration: none;
+
+                @mixin heading {
+                    display: block;
+                    margin: 0;
+                    transition: color 0.3s ease-in-out;
+                }
+
+                @mixin heading-hover {
+                    color: $color-hover;
+                    transition: color 0.3s ease-in-out;
+                }
+
+                .title {
+                    @include heading;
+
+                    color: $color-ui-main-headline-primary;
+                    font-size: 2.4em;
+                    font-weight: 500;
+                    line-height: 0.875;
+                    margin-top: 2.5rem;
+                }
+
+                .subtitle {
+                    @include heading;
+
+                    color: $color-ui-main-headline-secondary;
+                    font-size: 1.5em;
+                    font-weight: 400;
+                    line-height: 1.2;
+                    margin-top: 2.2rem;
+                    vertical-align: 0.05rem;
+                }
+
+                &:hover,
+                &:visited:hover {
+                    .title {
+                        @include heading-hover;
+                    }
+
+                    .subtitle {
+                        @include heading-hover;
+                    }
+                }
+
+                &:visited {
+                    .title {
+                        color: $color-ui-main-headline-primary;
+                    }
+
+                    .subtitle {
+                        color: $color-ui-main-headline-secondary;
+                    }
+                }
+            }
+        }
+
+        .content {
+            color: $color-content-summary;
+            font-family: $font-text-serif;
+            font-size: 1.7em;
+            line-height: 1.7;
+            margin-top: 1.9rem;
+
+            a {
+                color: $color-content-summary;
+                margin: 0;
+                text-decoration: none;
+                transition: color 0.3s ease-in-out;
+
+                &:visited {
+                    color: $color-content-summary;
+                }
+
+                &:hover,
+                &:visited:hover {
+                    color: $color-hover;
+                    transition: color 0.3s ease-in-out;
+                }
+            }
+        }
+
+        .footer {
+            margin-top: 2.2rem;
+        }
     }
 }
