Fixes table of contents.

--- a/src/components/ContentFooter.module.scss
+++ b/src/components/ContentFooter.module.scss
@@ -1,6 +1,6 @@
 @import '../styles/colors';
 
-.contentFooter {
+.footer {
     padding-left: 5.5rem;
     padding-right: 5.5rem;
     padding-top: 5.3rem;
