--- a/src/components/Main.module.scss
+++ b/src/components/Main.module.scss
@@ -1,81 +1,86 @@
 @import '../styles/colors';
 
-.appContainer {
+.app {
     width: 100%;
-}
 
-// Wrappers
+    .navigation {
+        align-items: stretch;
+        background: url('../../assets/images/background-cover.jpg') no-repeat $color-ui-nav-background;
+        background-size: cover;
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        padding-bottom: 6.1rem;
+        position: fixed;
+        top: 0;
+        width: 30%;
 
-.controlWrapper {
-    align-items: flex-end;
-    background: url('../../assets/images/background-cover.jpg') no-repeat $color-ui-nav-background;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    justify-content: flex-start;
-    position: fixed;
-    top: 0;
-    width: 30%;
-}
+        .navigationBar {
+            align-items: stretch;
+            display: flex;
+            flex-direction: column;
+            flex-grow: 0;
+            flex-shrink: 0;
+            margin-bottom: 2.8rem;
+            margin-left: 5.5rem;
+            margin-right: 3.4rem;
+            margin-top: 2.6rem;
+        }
 
-.controlWrapperOverlay {
-    background-color: transparentize($color-theme, 0.8);
-    background-image: linear-gradient(140deg, $color-theme-gradient-end 20%, $color-theme-gradient-end);
-    bottom: 0;
-    height: 100%;
-    left: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 100%;
-    z-index: -2;
-}
+        .tableOfContents {
+            align-items: stretch;
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 6.1rem;
+            margin-left: 5.5rem;
+            margin-right: 3.4rem;
+            margin-top: 2.8rem;
+        }
 
-.contentWrapper {
-    align-items: flex-start;
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    justify-content: flex-start;
-    margin-left: 30%;
-    width: calc(70% * 0.618);
-}
+        .navigationOverlay {
+            align-items: flex-end;
+            background-color: transparentize($color-theme, 0.8);
+            background-image: linear-gradient(140deg, $color-theme-gradient-end 20%, $color-theme-gradient-end);
+            bottom: 0;
+            display: flex;
+            flex-direction: column-reverse;
+            height: 100%;
+            left: 0;
+            position: fixed;
+            right: 0;
+            top: 0;
+            width: 30%;
+            z-index: -2;
 
-// Control Containers
+            .siteInfo {
+                margin-bottom: 3.1rem;
+                margin-left: 5.5rem;
+                margin-right: 3.4rem;
+            }
+        }
+    }
 
-.navigationContainer {
-    flex-grow: 1;
-    flex-shrink: 0;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: flex-end;
-    padding-top: 2.6rem;
-    padding-right: 3.4rem;
-    padding-left: 5.5rem;
-    padding-bottom: 6.1rem;
-    width: calc(100% - 8.9rem);
-}
+    .content {
+        align-items: flex-start;
+        display: flex;
+        flex-direction: column;
+        height: 100vh;
+        justify-content: flex-start;
+        margin-left: 30%;
+        width: calc(70% * 0.618);
 
-.siteFooterContainer {
-    bottom: 0;
-    position: absolute;
-    z-index: -1;
-}
+        .main {
+            display: flex;
+            flex-direction: column;
+            flex-grow: 1;
+            flex-shrink: 0;
+            width: 100%;
+        }
 
-// Content Containers
-
-.mainContentContainer {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    flex-shrink: 0;
-    width: 100%;
-}
-
-.footerContentContainer {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
+        .footer {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+        }
+    }
 }
