--- a/src/components/SiteFooter.module.scss
+++ b/src/components/SiteFooter.module.scss
@@ -2,35 +2,27 @@
 @import '../styles/colors';
 
 .siteFooter {
+    align-items: stretch;
+    color: $color-ui-nav-footnote;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
-    color: $color-ui-nav-footnote;
+    text-align: right;
     text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-    text-align: end;
-    padding-top: 1.7rem;
-    padding-left: 3.4rem;
-    padding-right: 3.4rem;
-    padding-bottom: 3.1rem;
 
-    .sloganItem {
-        margin: 0;
-        padding: 0;
-
-        span {
-            font-size: 3em;
-            font-weight: 500;
-            line-height: 1.83;
-        }
+    .copyright {
+        display: block;
+        font-size: 1.1em;
+        font-weight: 400;
+        line-height: 1.18;
+        margin-top: 1.5rem;
     }
 
-    .copyrightItem {
-        margin-top: 1.5rem;
-
-        span {
-            font-size: 1.1em;
-            font-weight: 400;
-            line-height: 1.18;
-        }
+    .slogan {
+        display: block;
+        font-size: 3em;
+        font-weight: 500;
+        line-height: 1.83;
+        margin: 0;
+        padding: 0;
     }
 }
