Refines title and subtitle in page and post.

--- a/src/components/PageDocument.module.scss
+++ b/src/components/PageDocument.module.scss
@@ -10,33 +10,41 @@
         .title {
             color: $color-content-headline-primary;
             font-family: $font-text-sans;
-            font-size: 4.4em;
-            font-weight: 300;
-            line-height: 1.18;
+            font-size: 3.9em;
+            font-weight: 400;
+            line-height: calc(39 / 48);
             margin: 0;
         }
 
         .subtitle {
             color: $color-content-headline-secondary;
             font-family: $font-text-sans;
-            font-size: 2.8em;
+            font-size: 2.4em;
             font-weight: 300;
-            line-height: 1.46;
+            line-height: calc(32 / 24);
             margin: 0;
-            margin-top: 0.5rem;
+            margin-top: 1.2rem;
         }
+    }
 
-        .caption {
-            margin-top: 4rem;
-        }
+    .caption {
+        margin-top: 4rem;
+    }
+
+    .title + .caption {
+        margin-top: 4.3rem;
+    }
+
+    .subtitle + .caption {
+        margin-top: 4.6rem;
     }
 
     .content {
         font-family: $font-text-sans;
         font-size: 1.7em;
         line-height: 1.7;
-        margin-bottom: 4.1rem;
-        margin-top: 4.1rem;
+        margin-bottom: 5.5rem;
+        margin-top: 5.5rem;
 
         a {
             color: $color-tint;
