--- a/src/components/PostDocument.module.scss
+++ b/src/components/PostDocument.module.scss
@@ -12,7 +12,7 @@
             font-family: $font-text-serif;
             font-size: 4.4em;
             font-weight: 300;
-            line-height: 1.18;
+            line-height: calc(52 / 44);
             margin: 0;
         }
 
@@ -21,7 +21,7 @@
             font-family: $font-text-serif;
             font-size: 2.8em;
             font-weight: 300;
-            line-height: 1.46;
+            line-height: calc(41 / 28);
             margin: 0;
             margin-top: 0.5rem;
         }
