--- a/src/components/Main.module.scss
+++ b/src/components/Main.module.scss
@@ -60,7 +60,7 @@
         }
     }
 
-    .content {
+    .primary {
         align-items: flex-start;
         display: flex;
         flex-direction: column;
@@ -69,15 +69,25 @@
         margin-left: 30%;
         width: calc(70% * 0.618);
 
-        .main {
-            display: flex;
-            flex-direction: column;
-            flex-grow: 1;
-            flex-shrink: 0;
-            width: 100%;
+        .content {
+            .header {
+                width: 100%;
+            }
+
+            .main {
+                display: flex;
+                flex-direction: column;
+                flex-grow: 1;
+                flex-shrink: 0;
+                width: 100%;
+            }
+
+            .footer {
+                width: 100%;
+            }
         }
 
-        .footer {
+        .contentFooter {
             display: flex;
             flex-direction: column;
             width: 100%;
